<resources>
    <string name="app_name">myCard</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="privacy_policy_label">By registering, you agree to our\n%1$s</string>
    <string name="terms_of_use_label">&#160;and %1$s.</string>
    <string name="balance">%1$s %2$s</string>
    <string name="next_step">Continue</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="acquainted">Let\'s get\nacquainted</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="location_tittle">Where are you\nlocated?</string>
    <string name="user_address">Address approve conditions</string>
    <string name="desc_address">We cannot approve your account\n if you are in Russia or 15 other countries</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="restore">Restore</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="secured_appstore">Secured by the App Store. Cancel anytime</string>
    <string name="billed_annually">Billed Annually</string>
    <string name="billed_monthly">Billed Monthly</string>
    <string name="payments">Payments</string>
    <string name="top_up_card">Top up card</string>
    <string name="birth_date">Birth date DD.MM.YYYY</string>
    <string name="top_up_card_tittle">Top up card</string>
    <string name="top_up_description">To top up your account, send any amount to the address below.</string>
    <string name="top_up_service_fee">Top-up service fee</string>
    <string name="wallet_network">Wallet network</string>
    <string name="support">Support</string>
    <string name="copy_qr_text">0x6f4e25bd70275</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="help_and_support">Help and support</string>
    <string name="legal_information">Legal information</string>
    <string name="log_out">Log out</string>
    <string name="telegram">Telegram</string>
    <string name="skype">Skype</string>
    <string name="close_card_dialog_title">Are you sure you want to \nclose the card? All remaining \nfunds will be forfeited.</string>
    <string name="log_out_dialog_title">Are you sure you want \nto log out?</string>
    <string name="log_out_positive">Log out</string>
    <string name="close_card_positive">Close card</string>
    <string name="log_out_negative">No</string>
    <string name="close_card_negative">No</string>
    <string name="card_num_placeholder">• • • • 0000</string>
    <string name="short_card_number">• • • • %1$s</string>
    <string name="card_exp_date">02/24</string>
    <string name="john_doe">JOHN DOE</string>
    <string name="card_balance">%1$s %2$s</string>
    <string name="name">Name</string>
    <string name="card_number">Card number</string>
    <string name="_1234_5678_9012_3456">1234 5678 9012 3456</string>
    <string name="cvv">CVV</string>
    <string name="_173">173</string>
    <string name="expire_date">Expire date</string>
    <string name="you_are_logged_out">You are logged out</string>
    <string name="you_are_not_logged_out">You are not logged out</string>
    <string name="web_client_id">364290209629-2i1of6u99o36vna3qrvabj2a3kjvhm28.apps.googleusercontent.com</string>
    <string name="error_input_text">Введите текст более 3 символов</string>
    <string name="_60_00_usdt">60,00 USDT</string>
    <string name="account_balance">Account balance</string>
    <string name="issue_card">Issue card</string>
    <string name="redesign_card">Redesign card</string>
    <string name="close_card">Close card</string>
    <string name="_50">50 $</string>
    <string name="balance_card">balance card</string>
    <string name="cost">cost</string>
    <string name="view_all">View all</string>
    <string name="usd">%1$s USD</string>
    <string name="myprefs">myPrefs</string>
    <string name="startcolor">startColor</string>
    <string name="endcolor">endColor</string>
    <string name="card_is_closed">Card is closed</string>
    <string name="card_is_not_closed">Card is not closed</string>
    <string name="top_up_account">Top up account</string>
    <string name="userid">userId</string>
    <string name="card_holder_tittle">Name</string>
    <string name="placeholder_expDate">• • / • •</string>
    <string name="card_number_is_copied">Card number is copied</string>
    <string name="expiry_date_is_copied">Expiry date is copied</string>
    <string name="cvv_is_copied">CVV is copied</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="field_email_can_not_be_empty">Field email can not be empty</string>
    <string name="field_password_can_not_be_empty">Field password can not be empty</string>
</resources>