<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/balance_selector">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_12"
        android:paddingBottom="@dimen/margin_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/balanceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_card"
            android:textColor="@color/black"
            android:textSize="@dimen/text_12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:paddingTop="@dimen/margin_12"
        android:paddingBottom="@dimen/margin_12"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/usdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_60_00_usdt"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cost"
            android:textColor="@color/black"
            android:textSize="@dimen/text_12" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>