<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_4"
    android:paddingTop="@dimen/padding_4"
    android:paddingEnd="@dimen/padding_4">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/terms_of_service"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/next" />

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/restore"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/privacy"
        app:layout_constraintStart_toEndOf="@+id/terms" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/next"
        app:layout_constraintStart_toEndOf="@+id/share" />

    <TextView
        android:id="@+id/secured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_40"
        android:text="@string/secured_appstore"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12"
        app:layout_constraintBottom_toTopOf="@id/terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="@dimen/size_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@drawable/rounded_corner_black_bg"
        android:text="@string/next_step"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/secured"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/billedAnnually"
        android:layout_width="@dimen/size_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_40"
        android:paddingTop="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20"
        android:text="@string/billed_annually"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/billedMonthly"
        android:layout_width="@dimen/size_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_10"
        android:paddingTop="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20"
        android:text="@string/billed_monthly"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16"
        app:layout_constraintBottom_toTopOf="@+id/billedAnnually"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_zero"
        android:layout_marginBottom="@dimen/margin_40"
        android:scaleType="fitXY"
        android:src="@drawable/card_is_ready"
        app:layout_constraintBottom_toTopOf="@+id/billedMonthly"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>