<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopUpFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/topUpCard"
        android:layout_width="@dimen/size_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:cardBackgroundColor="@color/color_grey"
        app:cardCornerRadius="@dimen/radius_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTopUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:text="@string/top_up_card_tittle"
                android:textColor="@color/black"
                android:textSize="@dimen/text_28"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descTopUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_20"
                android:gravity="center"
                android:text="@string/top_up_description"
                android:textSize="@dimen/text_16" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/topUpService"
        android:layout_width="@dimen/size_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:cardBackgroundColor="@color/color_grey"
        app:cardCornerRadius="@dimen/radius_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topUpCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/topUpFree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/top_up_service_fee"
                android:textColor="@color/black"
                android:textSize="@dimen/text_12" />

            <TextView
                android:id="@+id/walletNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_20"
                android:text="@string/wallet_network"
                android:textSize="@dimen/text_12" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_qr_code"
        app:layout_constraintBottom_toTopOf="@+id/support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topUpService" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/support"
        android:layout_width="@dimen/size_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_34"
        android:background="@drawable/rounded_corner_gray_bg"
        android:text="@string/support"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:icon="@drawable/telegram_badge"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>